[project]
name = "validator_br"
version = "0.1.0"
description = "Uma biblioteca enxuta e rápida para validação de CPF"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CodeTangent", email = "developercsharp14@gmail.com"},
]
requires-python = ">=3.8"

keywords = ["cpf", "validação", "brasil", "documentos"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
